--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,27 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
-  btn {
+  .btn {
+    font-size: 1.5rem;
+  }
+}
+
+/* Input */
+.input {
+  padding: 1.8rem 3.5rem;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  outline: 0;
+  color: var(--color-headings);
+  font-size: 2rem;
+}
+
+::placeholder {
+  color: #cdcbd7;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
     font-size: 1.5rem;
   }
 }
