--- a/css/style.css
+++ b/css/style.css
@@ -524,3 +524,35 @@ a {
     margin: 0 2rem;
   }
 }
+
+/* Collapsibles */
+.collapsibles__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collapsibles__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.collapsibles__chevron {
+  transform: rotate(-90deg);
+  transition: transform 0.3s;
+}
+
+.collapsibles__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.collapsibles--expanded .collapsibles__chevron {
+  transform: rotate(0);
+}
+
+.collapsibles--expanded .collapsibles__content {
+  max-height: 100vh;
+  opacity: 1;
+}
