--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,41 @@ a {
   max-height: 100vh;
   opacity: 1;
 }
+
+/* Blocks */
+.block {
+  --verticle-padding: 6rem;
+  padding: var(--verticle-padding) 2rem;
+}
+
+.block__heading {
+  margin-top: 0;
+}
+
+.block__header {
+  text-align: center;
+}
+
+.block-dark {
+  background: #000;
+  color: #7b858b;
+}
+
+.block-dark .block__heading {
+  color: white;
+}
+
+.block--skewed-right {
+  padding-bottom: calc(var(--verticle-padding) + 4rem);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+
+.block--skewed-left {
+  padding-bottom: calc(var(--verticle-padding) + 4rem);
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
