--- a/css/style.css
+++ b/css/style.css
@@ -526,33 +526,33 @@ a {
 }
 
 /* Collapsibles */
-.collapsibles__header {
+.collapsible__header {
   display: flex;
   justify-content: space-between;
 }
 
-.collapsibles__heading {
+.collapsible__heading {
   margin-top: 0;
   font-size: 3rem;
 }
 
-.collapsibles__chevron {
+.collapsible__chevron {
   transform: rotate(-90deg);
   transition: transform 0.3s;
 }
 
-.collapsibles__content {
+.collapsible__content {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
   transition: all 0.3s;
 }
 
-.collapsibles--expanded .collapsibles__chevron {
+.collapsible--expanded .collapsible__chevron {
   transform: rotate(0);
 }
 
-.collapsibles--expanded .collapsibles__content {
+.collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
 }
@@ -593,4 +593,67 @@ a {
 .container {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+/* Navigation Bar */
+.nav {
+  background: #000;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+  align-items: center;
+}
+
+.nav__list {
+  width: 100%;
+  margin: 0;
+}
+
+.nav__item {
+  padding: 0.5rem 2rem;
+  border-bottom: 1px solid #222;
+}
+
+.nav__item > a {
+  color: #d2d0db;
+  transition: color 0.3s;
+}
+
+.nav__item > a:hover {
+  color: #fff;
+}
+
+.nav__toggler {
+  opacity: 0.5;
+  transition: box-shadow 0.15s;
+  cursor: pointer;
+}
+
+.nav.collapsible--expanded .nav__toggler {
+  opacity: 1;
+  box-shadow: 0 0 0 3px #666;
+  border-radius: 5px;
+}
+
+.nav__brand {
+  transform: translateY(5px);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__toggler {
+    display: none;
+  }
+
+  .nav__list {
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+    opacity: 1;
+    max-height: 100vh;
+  }
+
+  .nav__item {
+    border: 0;
+  }
 }
