--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
   box-sizing: border-box;
 }
 /* Typography */
+::selection {
+  background: var(--color-primary);
+  color: #fff;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -43,6 +48,7 @@ h2 {
 }
 
 h3 {
+  font-weight: 500;
   font-size: 3rem;
 }
 
@@ -127,7 +133,6 @@ a {
 /* Lists */
 .list {
   list-style: none;
-  color: var(--color-headings);
   padding-left: 0;
 }
 
@@ -139,6 +144,7 @@ a {
 .list-tick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 
 .list-tick .list__item {
@@ -401,6 +407,7 @@ a {
 /* Media */
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -603,18 +610,20 @@ a {
   color: #7b858b;
 }
 
-.block-dark .block__heading {
+.block-dark h1,
+.block-dark h2,
+.block-dark h3 {
   color: white;
 }
 
 .block--skewed-right {
   padding-bottom: calc(var(--verticle-padding) + 4rem);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--verticle-padding) + 4rem);
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 
 .container {
@@ -697,10 +706,6 @@ a {
   width: 100%;
 }
 
-.hero {
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-}
-
 @media screen and (min-width: 768px) {
   .hero {
     padding-top: 0;
@@ -768,5 +773,25 @@ a {
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
+  }
+}
+
+/*Showcase  Block*/
+.block-showcase__image > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .block-showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .block-showcase__image {
+    justify-self: end;
+  }
+
+  .block-showcase__image > img {
+    max-width: 700px;
+    width: auto;
   }
 }
